--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <html>
   <head>
-    <title>Larry's Shots</title>
+    <title>My Image Gallery</title>
   </head>
   <body>
-    <h1>Let's hope this works</h1>
-    <p>If you see this I didn't cut my wrists</p>
+    <h1>My Image Gallery</h1>
+    
+    <img src="images/Media (63).jpg" width="300">
+    <img src="images/Media (64).jpg.jpg" width="300">
+    <img src="images/Media (65).jpg.jpg" width="300">
+    <img src="images/Media (66).jpg.jpg" width="300">
+    <img src="images/Media (67).jpg.jpg" width="300">
+    <img src="images/Media (68).jpg.jpg" width="300">
+    <img src="images/Media (69).jpg.jpg" width="300">
+    <img src="images/Media (70).jpg.jpg" width="300">
+    <img src="images/Media (71).jpg.jpg" width="300">
+    <img src="images/Media (72).jpg.jpg" width="300">
+    <img src="images/Media (73).jpg.jpg" width="300">
+    <img src="images/Media (74).jpg.jpg" width="300">
+    <img src="images/Media (75).jpg.jpg" width="300">
+    <img src="images/Media (76).jpg.jpg" width="300">
+    <img src="images/Media (77).jpg.jpg" width="300">
+    <img src="images/Media (78).jpg.jpg" width="300">
+    <img src="images/Media (79).jpg.jpg" width="300">
+    <img src="images/Media (80).jpg.jpg" width="300">
+    <img src="images/Media (81).jpg.jpg" width="300">
+    <img src="images/Media (82).jpg.jpg" width="300">
+    <img src="images/Media (83).jpg.jpg" width="300">
+    <img src="images/Media (84).jpg.jpg" width="300">
+    <img src="images/Media (85).jpg.jpg" width="300">
+    <img src="images/Media (86).jpg.jpg" width="300">
+    <img src="images/Media (87).jpg.jpg" width="300">
+    <img src="images/Media (88).jpg.jpg" width="300">
+    <img src="images/Media (89).jpg.jpg" width="300">
+    <img src="images/Media (90).jpg.jpg" width="300">
+    <img src="images/Media (91).jpg.jpg" width="300">
+    <img src="images/Media (92).jpg.jpg" width="300">
+   
   </body>
 </html>
