--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Image Gallery</title>
+  <title>Larry's Shots</title>
   <style>
     :root { --gap: 12px; --tile-h: 220px; }
     * { box-sizing: border-box; }
