--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>My Image Gallery</h1>
+    <h1>Larry's Shots</h1>
 
     <div class="gallery">
           <img src="images/Media (63).jpg" width="300">
